# amos

./: .gitignore  Cargo.toml  LICENSE
.claude/skills/amos-create/: SKILL.md
.claude/skills/amos-file/: SKILL.md
.github/workflows/: ci.yml
plan/: .amos-status  .amosrc.toml  1-strip-tags.md  10-update-spec-docs.md  11-output-piping.md  12-adapter-framework.md  13-gh-adapter.md  14-lazy-resolution.md  15-file-adapter.md  16-url-adapter.md  17-ffmpeg-adapter.md  18-external-adapter.md  19-adapter-auto-pull.md  2-fix-cycle-status.md  20-uri-naming.md  21-routing-hints.md  22-prune.md  23-graph.md  24-create-command.md  25-dag-filtering.md  26-dep-descriptions.md  27-session-diff.md  28-auth-e2e.md  29-done-enrichment.md  3-gut-claude-pipeline.md  30-claude-skill.md  31-install-script.md  32-ci-release.md  33-adapter-driven-status.md  4-status-file.md  5-rewrite-output.md  6-simplify-cli.md  7-run-from-root.md  8-status-cli.md  9-remove-frontmatter-status.md  adapter-framework.md  claude-handoff.md  file-adapter.md  fix-cycle-status.md  gh-adapter.md  (+11 more)
scripts/: install.sh
skills/: amos.md
skills/amos/: SKILL.md
skills/amos-create/: SKILL.md
skills/amos-graph/: SKILL.md
skills/amos-notify/: SKILL.md
skills/amos-prune/: SKILL.md
skills/amos-show/: SKILL.md
skills/amos-sync/: SKILL.md
spec/: SPEC.md
src/: adapter.rs  adapter_pull.rs  amosrc.rs  cli.rs  dag.rs  external_adapter.rs  ffmpeg_adapter.rs  file_adapter.rs  gh_adapter.rs  lib.rs  main.rs  migrate.rs  output.rs  parser.rs  rename.rs  resolver.rs  scanner.rs  status.rs  url_adapter.rs
(+7 files in other folders)
