[package]
name = "amos"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Scans markdown files for work stream DAG blocks, builds dependency graphs, reports what he sees"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ignore = "0.4"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
